HelloUltraviolet/Fixtures/RejectedSource/Comptime/UserDiagnosticError/Source/Main.uv
//! Rejected compile-time specimen for user error diagnostic emission.

public procedure userDiagnosticErrorReference() -> i32 {
    comptime {
        diagnostics~>error("compile-time user diagnostic")
    }
    return 0
}
